--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="ZmUs5IYnJ6rm_cjEjCTg8h-ApWYZrx7rYBgAE8cTGlw" />
     <link rel="icon" type="image/svg+xml" href="/src/imgs/logoE.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lodge Eluney</title>
